syntax = "proto3";

option go_package = ".";

package transfer;

service FileTransfer {
  rpc Upload (stream Chunk) returns (UploadResponse) {}
}

message MetaData {
  string fileUuid = 1;
  string unique_name = 2;
  int64 size = 3;
  repeated string replicaChain = 4;
}

message Data {
  int64 number = 1;
  bytes rawBytes = 2;
}

message Chunk {
  oneof payload {
    MetaData meta = 1;
    Data data = 2;
  }
}

message UploadResponse {
  Status status = 1;
  string message = 2;
}

enum Status {
  STATUS_OK = 0;
  STATUS_ERROR = 1;
}